# biophysical-assay-data-analysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  sonar-project.properties
.github/actions/setup/: action.yaml
.github/workflows/: code_quality.yaml  release.yaml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
notebooks/: dsf_analysis.md  dsf_analysis_marimo.py  jupytext.toml
notebooks/data/: quantstudio7_example.csv
src/bada/: __init__.py
src/bada/models/: __init__.py  dsf_input_model.py  lightcycler480.py  quantstudio7.py
src/bada/parsers/: __init__.py  base_parser.py  lightcycler480_parser.py  quantstudio7_parser.py
src/bada/processing/: __init__.py  feature_extraction.py  model_fitting.py  peak_detection.py  preprocessing.py
src/bada/utils/: reformatting.py  utils.py  validation.py
src/bada/visualization/: __init__.py  heatmap.py  melting_curves.py
tests/: README.md  conftest.py  test_dsfworld_reference.py  test_init.py  test_model_fitting.py  test_models.py  test_parsers.py  test_peak_detection.py  test_processing.py  test_reformatting.py  test_utils.py  test_validation.py  test_visualization.py
tests/data/: dsfworld_reference_curves.json
